# mini_uuid

./: Cargo.toml  LICENSE  README.md
examples/: from_uuid.rs  functions.rs  simple.rs
src/: error.rs  lib.rs
tests/: base64.rs  url_base64.rs
