[package]
name = "mini_uuid"
description = "A small and URL-safe UUID crate for Rust."
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["uuid", "base64", "url-safe", "short", "mini"]
categories = ["data-structures"]
readme = "README.md"
homepage = "https://github.com/nanokeshtw/mini_uuid"
documentation = "https://docs.rs/mini_uuid/latest/mini_uuid/"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
uuid = "1.8.0"

[features]
default = ["v4", "url_safe", "padded"]
v1 = ["uuid/v1"]
v4 = ["uuid/v4"]
v7 = ["uuid/v7"]
url_safe = []
padded = []